--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 	</head>
 	<body>
 		<center>
-			<h1><font color="F00">The Jester will get his revenge from the grave!</font></h1>
+			<h1><font color="FF0000">The Jester will get his revenge from the grave!</font></h1>
 		</center>
 	</body>
 </html>
